syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.gpt";
option java_multiple_files = true;

package responses;

message GptSessionResponse {
}
